update app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ keycloak.auth-server-url=https://sam3-auth-app-appsvc-corp-sam-sit-1.tstcld61.se
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://sam3-auth-app-appsvc-corp-sam-sit-1.tstcld61.server.ha.org.hk/auth/realms/kwh
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://sam3-auth-app-appsvc-corp-sam-sit-1.tstcld61.server.ha.org.hk/auth/realms/kwh/protocol/openid-connect/certs
+
+spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_AUDIT_LOG
+spring.jpa.properties.org.hibernate.envers.audit_table_prefix=
+spring.jpa.properties.org.hibernate.envers.revision_field_name=REV_ID
+spring.jpa.properties.org.hibernate.envers.revision_type_field_name=REV_TYPE
+spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
