--- a/openshift-dev/kwh-its-data-svc.yaml
+++ b/openshift-dev/kwh-its-data-svc.yaml
@@ -17,6 +17,8 @@ spec:
       labels:
         app: kwh-its-data-svc
     spec:
+      # nodeSelector:
+      #   ha-logtype: hostpathlogging
       volumes:
         - name: log-path
           persistentVolumeClaim:
