add new api for request detail

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=false
 #spring.datasource.url=jdbc:sqlserver://<server-name>.database.windows.net:1433;database=kwh_its;user=<username>;password=<password>
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+
+server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldqehprd1.server.ha.org.hk/
