--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -9,3 +9,5 @@ spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldqehprd1.server.ha.org.hk/
