--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
 # Spring Data JPA
 #spring.datasource.url=jdbc:sqlserver://DC7KWHIDB01.corp.ha.org.hk;instanceName=KWHI_DC7_MP1;databaseName=kcc_spring_boot;encrypt=false;failoverPartner=DC6KWHIDB01.corp.ha.org.hk\KWHI_DC6_MP1
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASS}
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.show-sql=false
-#spring.jpa.properties.hibernate.format_sql=false
+#spring.datasource.url=jdbc:sqlserver://DC8OLMHDB02.corp.ha.org.hk;instanceName=OLMH_DC8_MP2;database=kwh_its;encrypt=false
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldqehprd1.server.ha.org.hk/
