--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldqehprd1.server.ha.org.hk/
+server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldqehprd1.server.ha.org.hk//
