--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.format_sql=false
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
-server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk
+server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 
 #https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconBedCleansing.png
 #https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconDrugDispensing.png
