--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,4 +6,4 @@ spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-server.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk
+server.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
