--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,12 +7,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-
-#spring.datasource.url=jdbc:sqlserver://<server-name>.database.windows.net:1433;database=kwh_its;user=<username>;password=<password>
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-
 server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+server.env='dev'
 
 #https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconBedCleansing.png
 #https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconDrugDispensing.png
