--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -11,3 +11,4 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+server.env='deflaut'
