--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 server.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
+server.env='prod'
