--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,3 +8,4 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 server.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
 server.env='prod'
+server.frontendpath=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
