--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.format_sql=false
 
 server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 server.env='dev'
-server.frontendpath=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+server.frontend.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 
 #https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconBedCleansing.png
 #https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconDrugDispensing.png
