update eform wiht qrcode

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -8,5 +8,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
-server.env='deflaut'
+server.env='default'
 server.frontend.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
