--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
 # Spring Data JPA
+#spring.datasource.url=jdbc:sqlserver://DC7KCCIDB01.corp.ha.org.hk;instanceName=KCCI_DC7_MP1;databaseName=kcc_spring_boot;encrypt=false
 #spring.datasource.url=jdbc:sqlserver://DC7KWHIDB01.corp.ha.org.hk;instanceName=KWHI_DC7_MP1;databaseName=kcc_spring_boot;encrypt=false;failoverPartner=DC6KWHIDB01.corp.ha.org.hk\KWHI_DC6_MP1
 #spring.datasource.url=jdbc:sqlserver://DC8OLMHDB02.corp.ha.org.hk;instanceName=OLMH_DC8_MP2;database=kwh_its;encrypt=false
 spring.datasource.username=${DB_USER}
