1. Refactoring on the properties and API path. 2. Enable the contextLoads() JUnit test.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,10 +6,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-server.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
-server.env='dev'
-server.frontend.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
-
-#https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconBedCleansing.png
-#https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconDrugDispensing.png
-#https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/iconLabReport.png
+app.its.api.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
