--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,10 @@
 # Spring Data JPA
-#spring.datasource.url=jdbc:sqlserver://DC7KCCIDB01.corp.ha.org.hk;instanceName=KCCI_DC7_MP1;databaseName=kcc_spring_boot;encrypt=false
-#spring.datasource.url=jdbc:sqlserver://DC7KWHIDB01.corp.ha.org.hk;instanceName=KWHI_DC7_MP1;databaseName=kcc_spring_boot;encrypt=false;failoverPartner=DC6KWHIDB01.corp.ha.org.hk\KWHI_DC6_MP1
-#spring.datasource.url=jdbc:sqlserver://DC8OLMHDB02.corp.ha.org.hk;instanceName=OLMH_DC8_MP2;database=kwh_its;encrypt=false
+spring.datasource.url=jdbc:mysql:loadbalance://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its?characterEncoding=UTF-8&loadBalancePingTimeout=2000&connectTimeout=5000&loadBalanceValidateConnectionOnSwapServer=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-server.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
-server.env='prod'
-server.frontend.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+
+app.its.api.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
+app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
