--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,22 @@
 			<artifactId>keycloak-spring-boot-starter</artifactId>
 			<version>21.1.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.27</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.27</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.27</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
