add date time on equip  and call alarm api

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.format_sql=false
 
 app.its.api.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+app.its.alarm.path=	https://kwh-its-alarm-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
