--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,10 @@
 spring.datasource.url=jdbc:mysql:loadbalance://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its_dev?characterEncoding=UTF-8&loadBalancePingTimeout=2000&connectTimeout=5000&loadBalanceValidateConnectionOnSwapServer=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 app.its.api.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+app.its.alarm.path=	https://kwh-its-alarm-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
