--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,4 +7,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 app.its.api.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
-app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+app.its.eform.path=https://kwh-its-eform-app-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
+app.its.alarm.path=	https://kwh-its-alarm-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
