--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql:loadbalance://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its_dev?characterEncoding=UTF-8&loadBalancePingTimeout=2000&connectTimeout=5000&loadBalanceValidateConnectionOnSwapServer=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
