--- a/openshift/kwh-its-data-svc.yaml
+++ b/openshift/kwh-its-data-svc.yaml
@@ -24,7 +24,8 @@ spec:
       volumes:
         - name: log-path
           persistentVolumeClaim:
-            claimName: hostpathcldlog-kccclinicalprd-pvc
+            # claimName: hostpathcldlog-kccclinicalprd-pvc
+            claimName: cldlog-kccclinicalprd-pvc
       containers:
         - name: kwh-its-data-svc
           image: image-registry.openshift-image-registry.svc:5000/kccclinical-prd/kwh-its-data-svc
