--- a/openshift-dev/kwh-its-data-svc.yaml
+++ b/openshift-dev/kwh-its-data-svc.yaml
@@ -24,7 +24,8 @@ spec:
       volumes:
         - name: log-path
           persistentVolumeClaim:
-            claimName: hostpathcldlog-kccclinicaldev-pvc
+            # claimName: hostpathcldlog-kccclinicaldev-pvc
+            claimName: cldlog-kccclinicaldev-pvc
       containers:
         - name: kwh-its-data-svc
           image: image-registry.openshift-image-registry.svc:5000/kccclinical-dev/kwh-its-data-svc
