add api key env

--- a/openshift-dev/kwh-its-data-svc.yaml
+++ b/openshift-dev/kwh-its-data-svc.yaml
@@ -75,6 +75,11 @@ spec:
                 secretKeyRef:
                   name: kwh-its-secret
                   key: kwh.its.key
+            - name: API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: kwh-its-data-secret
+                  key: kwh.its.data.key
             - name: ALS_PROJECT_CODE
               value: ITS
             - name: ALS_POD_NAME
