--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.org.hibernate.envers.audit_table_prefix=
 spring.jpa.properties.org.hibernate.envers.revision_field_name=REV_ID
 spring.jpa.properties.org.hibernate.envers.revision_type_field_name=REV_TYPE
 spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
+api.key=${API_KEY}
