--- a/openshift-stg/kwh-its-data-svc.yaml
+++ b/openshift-stg/kwh-its-data-svc.yaml
@@ -80,6 +80,11 @@ spec:
                 secretKeyRef:
                   name: kwh-its-data-secret
                   key: kwh.its.data.key
+            - name: SPRING_PROFILES_ACTIVE
+              valueFrom:
+                configMapKeyRef:
+                  name: env-config
+                  key: spring.profiles.active
             - name: ALS_PROJECT_CODE
               value: ITS
             - name: ALS_POD_NAME
