test api key hardcode

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,5 +18,6 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://sam3-auth-app-kcci
 app.its.api.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
 app.its.eform.path=https://kwh-its-eform-app-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
 app.its.alarm.path=https://kwh-its-alarm-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
+# HKT alarm API url
 kwh.its.url=https://graviteeio-apim3-gateway-its-kwh-itspurpose-dev.tstcld61.server.ha.org.hk/
 kwh.its.key=${KWH_ITS_KEY}
