--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,5 +17,7 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://sam3-auth-app-apps
 app.its.api.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 app.its.alarm.path=https://kwh-its-alarm-svc-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
+# HKT alarm API url
 kwh.its.url=https://graviteeio-apim3-gateway-its-kwh-itspurpose-dev.tstcld61.server.ha.org.hk/
-kwh.its.key=${KWH_ITS_KEY}
+#
+kwh.its.key=5f2f3d82-94cc-4a0a-b731-b61d8a2631d2
