--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,4 +20,5 @@ app.its.alarm.path=https://kwh-its-alarm-svc-kccclinical-stag-prd.cldkwhprd1.ser
 # HKT alarm API url
 kwh.its.url=https://graviteeio-apim3-gateway-its-kwh-itspurpose-dev.tstcld61.server.ha.org.hk/
 #
-kwh.its.key=5f2f3d82-94cc-4a0a-b731-b61d8a2631d2
+#kwh.its.key=5f2f3d82-94cc-4a0a-b731-b61d8a2631d2
+kwh.its.key=${KWH_ITS_KEY}
