test kwh ts key 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.jpa.properties.org.hibernate.envers.revision_field_name=REV_ID
 spring.jpa.properties.org.hibernate.envers.revision_type_field_name=REV_TYPE
 spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
 api.key=${API_KEY}
+#api.key=5f2f3d82-94cc-4a0a-b731-b61d8a2631d2
