--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.lifecycle.timeout-per-shutdown-phase=20s
 management.endpoint.health.probes.enabled=true
 # Logging
 logging.level.hk.org.ha.kcc=debug
-logging.level.hk.org.ha.kcc.=INFO
+#logging.level.hk.org.ha.kcc.=INFO
 # Hibernate Envers
 #spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_AUDIT_LOG
 #spring.jpa.properties.org.hibernate.envers.audit_table_prefix=
@@ -17,3 +17,11 @@ logging.level.hk.org.ha.kcc.=INFO
 #spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
 api.key=${API_KEY}
 #api.key=5f2f3d82-94cc-4a0a-b731-b61d8a2631d2
+# Hibernate Envers
+spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_AUDIT_LOG
+spring.jpa.properties.org.hibernate.envers.audit_table_prefix=
+spring.jpa.properties.org.hibernate.envers.revision_field_name=REV_ID
+spring.jpa.properties.org.hibernate.envers.revision_type_field_name=REV_TYPE
+spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
+spring.jpa.properties.hibernate.cdi.extensions=false
+spring.jpa.properties.hibernate.id.db_structure_naming_strategy=legacy
