update hkt alarm api in properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,5 @@
 # Spring Data JPA
-spring.datasource.url=jdbc:mysql:loadbalance://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its_dev?characterEncoding=UTF-8&loadBalancePingTimeout=2000&connectTimeout=5000&loadBalanceValidateConnectionOnSwapServer=true
-#spring.datasource.url=jdbc:mysql:loadbalance://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its?characterEncoding=UTF-8&loadBalancePingTimeout=2000&connectTimeout=5000&loadBalanceValidateConnectionOnSwapServer=true
+spring.datasource.url=jdbc:mysql:loadbalance://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its?characterEncoding=UTF-8&loadBalancePingTimeout=2000&connectTimeout=5000&loadBalanceValidateConnectionOnSwapServer=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=none
@@ -17,7 +16,6 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://sam3-auth-app-kcci
 # ITS Data Repository Service
 app.its.api.path=https://kwh-its-data-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
 app.its.eform.path=https://kwh-its-eform-app-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
-app.its.alarm.path=https://kwh-its-alarm-svc-kccclinical-prd.cldkwhprd1.server.ha.org.hk/
 # HKT alarm API url
-kwh.its.url=https://graviteeio-apim3-gateway-its-kwh-itspurpose-dev.tstcld61.server.ha.org.hk/
+kwh.its.url=https://graviteeio-apim-gateway-kccnonc-kwh-its-prd.cldkwhprd1.server.ha.org.hk/
 kwh.its.key=${KWH_ITS_KEY}
