--- a/openshift-stg/kwh-its-data-svc.yaml
+++ b/openshift-stg/kwh-its-data-svc.yaml
@@ -26,6 +26,18 @@ spec:
           persistentVolumeClaim:
             # claimName: hostpathcldlog-kccclinicalstagprd-pvc
             claimName: cldlog-kccclinicalstagprd-pvc
+            affinity:
+              podAntiAffinity:
+                preferredDuringSchedulingIgnoredDuringExecution:
+                  - weight: 100
+                    podAffinityTerm:
+                      labelSelector:
+                        matchExpressions:
+                          - key: app
+                            operator: In
+                            values:
+                              - kcc-spring-boot-svc
+                      topologyKey: esxi
       containers:
         - name: kwh-its-data-svc
           image: image-registry.openshift-image-registry.svc:5000/kccclinical-stag-prd/kwh-its-data-svc
