--- a/openshift/kwh-its-data-svc.yaml
+++ b/openshift/kwh-its-data-svc.yaml
@@ -26,6 +26,18 @@ spec:
           persistentVolumeClaim:
             # claimName: hostpathcldlog-kccclinicalprd-pvc
             claimName: cldlog-kccclinicalprd-pvc
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: app
+                      operator: In
+                      values:
+                        - kcc-spring-boot-svc
+                topologyKey: esxi
       containers:
         - name: kwh-its-data-svc
           image: image-registry.openshift-image-registry.svc:5000/kccclinical-prd/kwh-its-data-svc
