add calender call checking

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,5 +18,11 @@ app.its.api.path=https://kwh-its-data-svc-kccclinical-stag-prd.cldkwhprd1.server
 app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.server.ha.org.hk/
 # HKT alarm API url
 kwh.its.url=https://graviteeio-apim3-gateway-its-kwh-itspurpose-dev.tstcld61.server.ha.org.hk/
-#kwh.its.key=5f2f3d82-94cc-4a0a-b731-b61d8a2631d2
 kwh.its.key=${KWH_ITS_KEY}
+# AUTH
+app.auth.api.path=https://kcc-auth-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/auth/
+#Calendar
+app.calendar.api.path=https://kcc-calendar-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
+# password
+app.auth.api.password=${KWH_ITS_PASSWORD}
+app.auth.api.user=${KWH_ITS_USER}
