--- a/openshift-dev/kwh-its-data-svc.yaml
+++ b/openshift-dev/kwh-its-data-svc.yaml
@@ -87,6 +87,16 @@ spec:
                 secretKeyRef:
                   name: kwh-its-secret
                   key: kwh.its.key
+            - name: KWH_ITS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: kwh-its-data-secret
+                  key: kwh.its.data.password
+            - name: KWH_ITS_USER
+              valueFrom:
+                secretKeyRef:
+                  name: kwh-its-data-secret
+                  key: kwh.its.data.user
             - name: API_KEY
               valueFrom:
                 secretKeyRef:
