--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -19,3 +19,8 @@ app.its.eform.path=https://kwh-its-eform-app-kccclinical-stag-prd.cldkwhprd1.ser
 # HKT alarm API url
 kwh.its.url=https://graviteeio-apim3-gateway-its-kwh-itspurpose-dev.tstcld61.server.ha.org.hk/
 kwh.its.key=${KWH_ITS_KEY}
+# AUTH
+app.auth.api.path=https://kcc-auth-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/auth/
+#Calendar
+app.calendar.api.path=https://kcc-calendar-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
+app.auth.api.password=${KWH_ITS_PASSWORD}
