--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,3 +19,8 @@ app.its.eform.path=https://kwh-its-eform-app-kccclinical-prd.cldkwhprd1.server.h
 # HKT alarm API url
 kwh.its.url=https://graviteeio-apim-gateway-kccnonc-kwh-its-prd.cldkwhprd1.server.ha.org.hk/
 kwh.its.key=${KWH_ITS_KEY}
+# AUTH
+app.auth.api.path=https://kcc-auth-svc-kccclinical-prd.prdcld61.server.ha.org.hk/api/v1/auth/
+#Calendar
+app.calendar.api.path=https://kcc-calendar-svc-kccclinical-prd.prdcld61.server.ha.org.hk//api/v1/calendar/public-holiday?startDate=
+app.auth.api.password=${KWH_ITS_PASSWORD}
