--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -24,3 +24,4 @@ app.auth.api.path=https://kcc-auth-svc-kccclinical-stag-prd.prdcld61.server.ha.o
 #Calendar
 app.calendar.api.path=https://kcc-calendar-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
 app.auth.api.password=${KWH_ITS_PASSWORD}
+app.auth.api.user=${KWH_ITS_USER}
