--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,5 +23,6 @@ kwh.its.key=${KWH_ITS_KEY}
 app.auth.api.path=https://kcc-auth-svc-kccclinical-prd.prdcld61.server.ha.org.hk/api/v1/auth/
 #Calendar
 app.calendar.api.path=https://kcc-calendar-svc-kccclinical-prd.prdcld61.server.ha.org.hk//api/v1/calendar/public-holiday?startDate=
+# password
 app.auth.api.password=${KWH_ITS_PASSWORD}
 app.auth.api.user=${KWH_ITS_USER}
