--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -2,9 +2,18 @@
 spring.datasource.url=jdbc:h2:mem:kwh_its;INIT=CREATE SCHEMA IF NOT EXISTS KWH_ITS
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+#connetion pool
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.poolName=SpringBootHikariCP
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
 # Keycloak
 keycloak.realm=Kwh
 keycloak.resource=kwh-its-data-svc
