--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,17 @@
 # Spring Data JPA
-spring.datasource.url=jdbc:mysql:loadbalance://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its_dev?characterEncoding=UTF-8&loadBalancePingTimeout=2000&connectTimeout=5000&loadBalanceValidateConnectionOnSwapServer=true
+spring.datasource.url=jdbc:mysql://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its_dev?autoReconnect=true&failOverReadOnly=false&maxReconnects=10
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+#connetion pool
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.poolName=SpringBootHikariCP
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
 # Keycloak
 keycloak.realm=Kwh
 keycloak.resource=kwh-its-data-svc
